syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
option go_package = "github.com/danielzfranklin/plantopo/api/v1";

service SyncBackend {
  // SetupConnection is called by the matchmaker to setup a future connection by
  // the frontend
  rpc SetupConnection(SyncBackendSetupConnectionRequest)
      returns (SyncBackendSetupConnectionResponse);

  // Connect is called by the frontend to connect using a token returned by
  // SetupConnection
  rpc Connect(stream SyncBackendIncomingMessage)
      returns (stream SyncBackendOutgoingMessage);

  rpc Export(SyncBackendExportRequest) returns (SyncBackendExportResponse);
  rpc Import(SyncBackendImportRequest) returns (SyncBackendImportResponse);

  rpc Stats(google.protobuf.Empty) returns (google.protobuf.Struct);
}

message SyncBackendSetupConnectionRequest {
  string map_id = 1;
  string token = 2;
}

message SyncBackendSetupConnectionResponse {
}

message SyncBackendIncomingMessage {
  oneof msg {
    SyncBackendConnectRequest connect = 1;
    SyncBackendIncomingUpdate update = 2;
  }
}

message SyncBackendConnectRequest {
  string token = 1;
  string map_id = 2;
  string client_id = 3;
}

message SyncBackendIncomingUpdate {
  int32 seq = 2;
  bytes aware = 3; // json
  bytes change = 4; // json
}

message SyncBackendOutgoingMessage {
  int32 ack = 1;
  bool initialLoadComplete = 4; // set to true to indicate the initial load is complete
  bytes aware = 2; // json
  bytes change = 3; // json
}

message SyncBackendExportRequest {
  SyncBackendConnectRequest connect = 1;
  string format = 2;
  string name = 4;
  string filename = 3;
}

message SyncBackendExportResponse {
  string url = 1;
}

message SyncBackendImportRequest {
  SyncBackendConnectRequest connect = 1;
  string url = 2;
  string format = 3;
  string import_id = 4;
  string imported_from_filename = 5;
}

message SyncBackendImportResponse {
}
